# webapp-template

./: .gitignore  LICENSE  README.md  compose.dev.yml  compose.yml  justfile  pyproject.toml
.cursor/rules/: agent_behavior.mdc  code-format-sql.ja.mdc  code_review.mdc  database-create-migration.ja.mdc  database-functions.ja.mdc  database-rls-policies.ja.mdc  declarative-database-schema.ja.mdc  edge-functions.ja.mdc  fastapi.mdc  global.mdc  nextjs-supabase-auth.ja.mdc  system_architect.mdc
app/: main.py
docker/app/: Dockerfile
docs/: development_workflows.md  technology_stack.md
images/: system_architecture.md
