[project]
name = "webapp-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "dependency-injector>=4.46.0",
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "sqlmodel>=0.0.24",
]

[tool.uv]
dev-dependencies = [
    "debugpy>=1.8.14",
    "faker>=37.1.0",
    "freezegun>=1.5.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.9",
]
